Bug 434786 - Commit 48ececc98 broke the statusbar in thumbnailbar-vertical mode
Summary: Commit 48ececc98 broke the statusbar in thumbnailbar-vertical mode
Status: VERIFIED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (add output of "git log -1 --oneline" to description)
Platform: Gentoo Packages Linux
: HI normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-03-22 18:43 UTC by Duncan
Modified: 2021-03-22 23:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Duncan 2021-03-22 18:43:13 UTC
Commit 48ececc98 broke the statusbar in thumbnailbar-vertical mode.  The statusbar is waaayyy too tall (~1020 px px tall in a window of 2160 px height, seems to start growing at a window height of ~315 px below which the statusbar is normal), as if the statusbar container is missing a necessary maximum height constraint.

A horizontal thumbnailbar appears to avoid the problem by effectively sitting on top of the statusbar, squashing it to normal size. 

This is live-git gwenview on live-git plasma/frameworks, on qt 5.15.2, updated today (March 22), built from the gentoo/kde overlay live-git packages.  Gwenview's current HEAD is f17af324e but bisection says 48ececc98 "Keep status bar below thumbnail bar" is the culprit.
Comment 1 Nate Graham 2021-03-22 19:28:40 UTC
Ah, we must have forgotten to explicitly constrain the statusbar's height to support that mode. Can confirm. Thanks for the bug report!

Noah, can you take a look?
Comment 2 Bug Janitor Service 2021-03-22 22:05:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/50
Comment 3 Noah Davis 2021-03-22 22:36:14 UTC
Git commit 65168dd8097aae482f46d35a466615cbd8823f2d by Noah Davis.
Committed on 22/03/2021 at 22:04.
Pushed by ngraham into branch 'master'.

Set status bar size constraint to fixed size

M  +1    -0    app/viewmainpage.cpp

https://invent.kde.org/graphics/gwenview/commit/65168dd8097aae482f46d35a466615cbd8823f2d
Comment 4 Duncan 2021-03-22 23:09:08 UTC
(In reply to Noah Davis from comment #3)
> Git commit 65168dd8097aae482f46d35a466615cbd8823f2d by Noah Davis.
> Set status bar size constraint to fixed size

That fixed it.  Thanks! =:^)