Set status bar size constraint to fixed size

BUG: 434786